fixed the bottom extra space

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ body,
 }
 
 #root {
+  min-height: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -45,6 +46,10 @@ body {
   color: var(--color-light--2);
   font-weight: 400;
   line-height: 1.6;
+  background: linear-gradient(135deg, #020617, #0f172a);
+  min-height: 100vh;
+  margin: 0;
+  overflow-x: hidden;
 }
 
 label {
