--- a/src/pages/AppLayout.module.css
+++ b/src/pages/AppLayout.module.css
@@ -1,6 +1,20 @@
-.app {
+/* .app {
   width: 100%;
   min-height: 100vh;
   display: grid;
   grid-template-rows: auto auto 1fr auto;
+} */
+
+/* .app {
+  width: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+} */
+
+.app {
+  flex: 1; /* THIS is the key fix */
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
